# JaSmartObject

./: .gitignore  README.md
app/esp8266/esp8266_basic_network_app/: .cproject  .project  CMakeLists.txt
app/esp8266/esp8266_basic_network_app/code/include/: adapter_task.h  wifi_task.h
app/esp8266/esp8266_simple_stack/: .cproject  .gitignore  .project  CMakeLists.txt
app/esp8266/esp8266_simple_stack/CMake/: config.cmake.in
app/linux/linux_simple_stack/: .gitignore  CMakeLists.txt
app/linux/linux_simple_stack/code/: BinarySwitchResource.cpp  BinarySwitchResource.h  main.cpp
app/windows/server_windows/: .cproject  .project  CMakeLists.txt
app/windows/server_windows/code/: main.cpp
client/: CMakeLists.txt  Client.cpp  Client.h  README.md  SimpleClient.cpp
code/: CMakeLists.txt
code/base/: CMakeLists.txt
code/base/common/src/: Hash.cpp  Uuid.cpp  byte_array.cpp  ip_addr.cpp  ip_socket_addr.cpp
code/base/export/: BaseObject.h  ErrCode.h  Hash.h  MsgQ.h  PtrArray.h  PtrMsgQ.h  SimpleList.h  SingletonHolder.h  TargetEndian.h  Uuid.h  base_consts.h  base_datatypes.h  base_utils.h  byte_array.h  common_defs.h  ip_addr.h  ip_socket_addr.h
code/coap/common/: coap_msg.cpp  coap_msg.h
code/coap/export/: coap_config.h
code/coap/options/: coap_block_option.cpp  coap_block_option.h  coap_option.cpp  coap_option.h  coap_option_set.cpp  coap_option_set.h
code/coap/parser/: msg_codec.cpp  msg_codec.h
code/debug/export/: ja_debug.h
code/memory/: CMakeLists.txt
code/memory/common/src/: IMemAllocator.cpp
code/memory/export/: IMemAllocator.h
code/memory/port/freertos/inc/: MemAllocFreeRtos.h
code/network/: CMakeLists.txt
code/network/common/inc/: AdapterProxy.h  AdapterProxyStore.h  MsgProcessor.h  SecureSession.h  SocketHelper.h  coap_msg_codec.h  common_utils.h  ip_adapter_base.h  logging_network.h  msg_processor.h
code/network/common/src/: AdapterMgrImpl.cpp  AdapterProxyStore.cpp  ConnectivityManager.cpp  EndPoint.cpp  InterfaceAddress.cpp  InterfaceMonitorProxyMgr.cpp  IpAdapterBase.cpp  IpAddress.cpp  MsgProcessor.cpp  SecureContext.cpp  SecureContextImpl.cpp  SecureContextImpl.h  SecureContextMgr.cpp  SecureContextUtils.cpp  SecureSession.cpp  adapter_mgr_impl.cpp  config_mgr.cpp  connectivity_mgr.cpp  end_point.cpp  interface_addr.cpp  ip_adapter_base.cpp  ip_addr.cpp  msg_processor.cpp  packet.cpp  platform_factory.cpp
code/network/export/: AdapterEvent.h  AdapterMgr.h  ConnectivityManager.h  EndPoint.h  IAdapter.h  IInterfaceMonitor.h  INetworkPlatformFactory.h  IUdpSocket.h  InterfaceAddress.h  IpAdapterBase.h  IpAdapterConfig.h  IpAddress.h  SecureContext.h  SecureContextMgr.h  SecureContextTypes.h  SecureContextUtils.h  TransportType.h  adapter_mgr.h  config_mgr.h  config_network.h  connectivity_mgr.h  data_types.h  end_point.h  i_adapter.h  i_interface_monitor.h  i_nwk_platform_factory.h  i_udp_socket.h  interface_addr.h  ip_adapter_config.h  konstants.h  konstants_network.h  network_config.h  network_datatypes.h  packet.h  packet_event_handler.h
code/network/export/coap/: CoapMsgPrinter.h  coap_block_option.h  coap_consts.h  coap_msg.h  coap_msg_codec.h  coap_option.h  coap_option_set.h  coap_options_set.h
code/ocfstack/common/inc/: OcfDeviceResource.h  OcfStackRequestHandler.h  OcfWellKnownResource.h
code/ocfstack/common/src/: OcfBaseServer.cpp  OcfDeviceResource.cpp  OcfFacade.cpp  OcfQueryContainer.cpp  OcfResource.cpp  OcfResourceMgr.cpp  OcfStack.cpp  OcfStackImpl.h  OcfStackRequestHandler.cpp  OcfWellKnownResource.cpp  ResPropValue.cpp
code/ocfstack/export/: OcfBaseCollectionResource.h  OcfBaseServer.h  OcfDeviceInfo.h  OcfExchange.h  OcfFacade.h  OcfHeaderOption.h  OcfIResource.h  OcfIServer.h  OcfMsgHeader.h  OcfMsgToken.h  OcfObserveInfo.h  OcfPlatformConfig.h  OcfPlatformInfo.h  OcfQueryContainer.h  OcfRequest.h  OcfResource.h  OcfResourceConsts.h  OcfResourceMgr.h  OcfResponse.h  OcfStack.h  ResPropValue.h
code/osal/: CMakeLists.txt
code/osal/common/inc/: OsalBuilder.h  OsalRandomImpl.h  OsalTimerMgr.h  TaskBase.h
code/osal/common/src/: OsalMgr.cpp  OsalRandom.cpp  OsalTimer.cpp  OsalTimerMgr.cpp  TaskBase.cpp
code/osal/export/: Condition.h  Mutex.h  OsTime.h  OsalError.h  OsalMgr.h  OsalRandom.h  OsalTimer.h  PrimitiveDataTypes.h  ScopedMutex.h  Sem.h  Task.h
code/osal/inc/: ConditionImpl.h  MutexImpl.h  OsalBuilder.h  OsalBuilderImpl.h  TaskImpl.h
code/osal/windows/inc/: ConditionImplWindows.h  MutexImplWindows.h  OsalBuilderImplWindows.h  TaskImplWindows.h
code/osal/windows/src/: ConditionImplWindows.cpp  MutexImplWindows.cpp  OsalBuilderImplWindows.cpp  TaskImplWindows.cpp
code/resources/: CMakeLists.txt
code/resources/common/src/: BinarySwitchResourceBase.cpp  ResModuleInterface.cpp
code/resources/export/: BinarySwitchResourceBase.h  ResModuleInterface.h
code/stack/: CMakeLists.txt
code/stack/common/inc/: BaseInteraction.h  BlockTransferStatus.h  ClientInteraction.h  DeviceResource.h  InteractionStore.h  MessageIdProvider.h  MulticastClientInteraction.h  ServerInteraction.h  TokenProvider.h  WellKnownResource.h
code/stack/common/src/: BaseInteraction.cpp  BaseResource.cpp  BlockTransferStatus.cpp  ClientInteraction.cpp  DeviceResource.cpp  Exchange.cpp  InteractionStore.cpp  MessageIdProvider.cpp  MessageSender.cpp  MsgStack.cpp  MulticastClientInteraction.cpp  QueryContainer.cpp  ResPropValue.cpp  ResourceMgr.cpp  ServerInteraction.cpp  SoStackFacade.cpp  TokenProvider.cpp  WellKnownResource.cpp
code/stack/export/: BaseResource.h  CborCodec.h  DeviceInfo.h  Exchange.h  IResource.h  Interaction.h  MessageSender.h  MsgStack.h  ObserveInfo.h  ObserverMgr.h  QueryContainer.h  ResPropValue.h  ResourceConsts.h  ResourceMgr.h  SoStackFacade.h  StackConfig.h  StackConsts.h  StackEvents.h  StackMessage.h  TransactionKeys.h  common_typedefs.h  logging_stack.h
code/stack/export/cbor/: CborCodec.h  CborDecoder.h  CborEncoder.h  CborEncoderBuffer.h  CborItemBuilder.h  CborListener.h  CborStreaming.h  CborTypedefs.h  ICborDecoderListener.h
server/: BinarySwitchResource.cpp  CMakeLists.txt  main.cpp
(+399 files in other folders)
